# ota-installer

./: .doit.db  .gitignore  \  clipboard.py  git_diff.txt  installer.py  main.py  mypy.ini  pyproject.toml  requirements.txt
__pycache__/: arguments.d.er  control.d.er  decorators.d.er  dispatchers.d.er  exceptions.d.er  execute.d.er  handlers.d.er  output.d.er  structures.d.er  style.d.er  task_builders.d.er  task_definitions.d.er  variables.d.er  variables_list.d.er
ota_installer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: application.py  command_line_interface.py  logger.py  logging_.py
src/components/directories/: boot_image_processor.py
src/components/file/: __init__.py  display_file_processor.py  file_name_processor.py
src/components/log_file/: variable_manager.py
src/debugging/: __init__.py  check_type.py
src/decorators/: __init__.py  colorized_figlet.py  colorized_figlet_printer.py  colorized_indent_printer.py  colorized_printer.py  colorizer.py  confirmation_prompt.py  continue_on_keypress.py  double_padded_footer_wrapper.py  encapsulation.py  exception_handler.py  figletizer.py  footer_wrapper.py  header_wrapper.py  indent_wrapper.py  multiply_string.py  output_printer.py  padded_footer_wrapper.py  style_wrapper.py  template.py  timeit.py
src/dispatchers/: dispatcher_interface.py
src/dispatchers/factories/: dispatcher_factory.py
src/dispatchers/mappings/: task_group_type_mapping.py
src/dispatchers/templates/: __init__.py  dispatcher_creator.py  dispatcher_template.py
src/dispatchers/types/: directory_type_dispatcher.py  file_type_dispatcher.py  image_type_dispatcher.py  task_group_type_dispatcher.py  variable_type_dispatcher.py
src/display/: display_variable_processor.py
src/display/components/: separator.py  subtitle.py  title.py
src/display/configurations/: display_configuration.py
src/display/factories/: display_factory.py
src/display/formatters/: display_formatter.py
src/display/functions/: __init__.py  display_configuration.py  display_factory.py  display_formatter.py
src/display/managers/: __init__.py  display_screen_manager.py
src/display/objects/: display_objects.py
src/display/templates/: display_template.py
src/display/variables/: functions.py
src/exceptions/handlers/: __init__.py  base_exception_handler.py  exception_handler_factory.py  exception_handlers.py  file_not_found_exception_handler.py  keyboard_interrupt_handler.py  type_error_handler.py
src/ota_installer/: __init__.py  __main__.py  application.py  command_line_interface.py  directory_handler.py  log_setup.py  main.py  task_group_handler.py  version_handler.py
src/ota_installer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ota_installer/containers/: decorators.py  file_name_parser.py
src/ota_installer/decorator/: __init__.py  colorized_indent_printer.py  colorizer.py  confirmation_prompt.py  continue_on_keypress.py  double_padded_footer_wrapper.py  encapsulation.py  exception_handler.py  figletizer.py  footer_wrapper.py  header_wrapper.py  indent_wrapper.py  multiply_string.py  output_printer.py  padded_footer_wrapper.py  styled_figlet_printer.py  styled_indent_printer.py  template.py  timeit.py
src/ota_installer/decorators/: __init__.py  colorized_figlet_printer.py  colorized_indent_printer.py  colorized_printer.py  colorizer.py  confirmation_prompt.py  continue_on_keypress.py  double_padded_footer_wrapper.py  encapsulation.py  exception_handler.py  figletizer.py  footer_wrapper.py  header_wrapper.py  indent_wrapper.py  multiply_string.py  (+7 more)
src/program_versioning/: __init__.py  software_version.py
src/services/: __init__.py  display_configuration_service.py  screen_manager_service.py
src/structures/: android_image_file.py  android_image_file_attributes.py  boot_image.py  directory.py  file_name_parser.py  image_file.py  magisk.py
src/styles/: __init__.py  colorize.py  escape_code_manager.py  indentation.py  palette.py  separator.py
src/tasks/: factory_template.py  task_execution.py  task_item_parser.py  task_operation_constants.py  task_operation_executor.py  task_operation_processor.py
src/types/: __init__.py  decorators.py  dispatcher_protocol.py
src/validation/: __init__.py  file_path_validation.py
src/variables/: classes.py  constants.py  functions.py  variable_manager.py
tmp/: ota-installer_frankel_cp2a.260705.006.txt
utils/: add_doc_strings.py  add_doc_strings.sh  apply_git_changes.sh  fix_errors.py  generate_git_changes_and_commits.sh  git_changes.sh  log_viewer.py
utils/debugging/: check_type.py  object_inspector.py
(+408 files in other folders)
