[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "ota-installer-20241005-10050200"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "annotated-types==0.7.0",
  "bsdiff4==1.2.4",
  "colorama==0.4.6",
  "protobuf==3.20.1",
  "pydantic==2.10.6",
  "pydantic-core==2.27.2",
  "pyfiglet==1.0.2",
  "six==1.16.0",
]
[tool.black]
target-version = ['py38']
line-length = 79
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 79
target-version = "py38"
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "B", "A", "PT", "SIM"]
ignore = ["UP004"]
exclude = [".git", "__pycache__", "dist", ".venv"]

[tool.ruff.isort]
combine-as-imports = true
force-single-line = false

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"
pythonVersion = "3.13"
pythonPlatform = "Linux"
defineConstant = { DEBUG = true }

[tool.pycodestyle]
max-line-length = 79
ignore = []
#exclude = .git,__pycache__,build,dist,.venv
