[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "ota-installer"
version = "2025.10.14"
requires-python = ">=3.14"
dependencies = [
  "bsdiff4==1.2.4",
  "colorama==0.4.4",
  "protobuf==3.20.1",
  "pyfiglet==1.0.2",
  "six==1.16.0",
  "typer==0.20.0",
]

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true                     #"none"                   # or "warning" to downgrade to a warning
reportMissingTypeStubs = false
typeCheckingMode = "basic"
pythonVersion = "3.14"
pythonPlatform = "Linux"
defineConstant = { DEBUG = true }
useLibraryCodeForTypes = true


[tool.ruff]
line-length = 79
target-version = "py312"
select = ["B", "E", "F", "I", "UP", "W"]
ignore = ["B008", "B018", "UP004"]                 #["E501"]
exclude = [".git", "__pycache__", "dist", ".venv"]

[tool.ruff.per-file-ignores]
"src/variables/functions.py" = ["F821"]
"**/__init__.py" = ["F403"]
[tool.ruff.isort]
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
#docstring-code-format = false
#docstring-code-line-length = "dynamic"

[tool.isort]
profile = "black"
line_length = 79
combine_as_imports = true
force_sort_within_sections = true
