[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

#requires = ["uv_build>=0.9.17,<0.10.0"]
#build-backend = "uv_build"

[project]
name = "ota-installer"
version = "2026.2.13"
requires-python = ">=3.14"
dependencies = [
  "dependency-injector==4.48.3",
  "loguru==0.7.3",
  "pyfiglet==1.0.2",
  "pyinputplus==0.2.12",
  "rich==14.2.0",
  "typer==0.20.0",
  ### payload_dumper deps
  "aiohttp>=3.8.0",
  "bsdiff4>=1.1",
  "brotli>=1.1.0",
  "fsspec>=2023.0.0",
  "protobuf>=5.27.3",
  "requests>=2.28.0",
  "six>=1.16.0",
  "zstandard>=0.23.0",

]
[tool.setuptools]
package-dir = { "" = "src" }

[project.scripts]
ota-installer = "ota_installer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = ["**/plugin_loader.py"]
reportMissingImports = true                     #"none" or "warning" to downgrade to a warning
reportMissingTypeStubs = false
typeCheckingMode = "basic"
pythonVersion = "3.14"
pythonPlatform = "Linux"
defineConstant = { DEBUG = true }
useLibraryCodeForTypes = true

requires-python = ">=3.14"
dependencies = []


[tool.ruff]
line-length = 79
target-version = "py312"
select = ["B", "E", "F", "I", "UP", "W"]
ignore = ["B008", "B018", "UP004"]                 # ["E501"]
exclude = [".git", "__pycache__", "dist", ".venv"]

[tool.ruff.per-file-ignores]
"src/variables/functions.py" = ["F821"]
"**/__init__.py" = ["F403"]
"**/plugin_loader.py" = ["F401"]
[tool.ruff.isort]
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
#docstring-code-format = false
#docstring-code-line-length = "dynamic"


[tool.isort]
profile = "black"
line_length = 79
combine_as_imports = true
force_sort_within_sections = true

[dependency-groups]
dev = ["ruff>=0.14.10", "vulture>=2.14"]
